add news sections

--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
                 <div class="container">
                     <div class="about__content info">
                         <div class="info__header">
-                            <h2 class="info__title">[О Компании]</h2>
+                            <div class="info__title">
+                                <h2 class="info__text">[О Компании]</h2>
+                            </div>
                             <article class="info__description description">
                                 <h3 class="description__title">Компания является одним из ведущих поставщиков подземного и наземного оборудования на рынке</h3>
                                 <div class="description__body">
@@ -211,9 +213,223 @@
                     </div>
                 </div>
             </section>
-            <section class="equipment"></section>
-            <section class="about"></section>
-            <section class="services"></section>
+            <section class="equipment">
+                <div class="container">
+                    <div class="equipment__container about__content info">
+                        <div class="info__header equipment__header">
+                            <div class="info__title equipment__title">
+                                <h2 class="info__text">[Оборудование]</h2>
+                                <h3 class="equipment__description">Наше оборудование  отличается высокой  надёжностью и всегда  работает безотказно</h3>
+                            </div>
+                            <div class="info__description equipment__cards">
+                                <div class="equipment__card equipment__card-big">
+                                    <div class="equipment__card-header">
+                                        <span class="equipment__card-info">[4 типа]</span>
+                                        <h4 class="equipment__card-name">Конвейеры</h4>
+                                    </div>
+                                    <div class="equipment__card-body">
+                                        <div class="equipment__card-container">
+                                            <img class="equipment__card-img" src="./img/imgs/konveer.png" alt="konveer">
+                                        </div>
+                                        <div class="equipment__card-btn card-btn">
+                                            <a class="card-btn__link" href="">
+                                                <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="equipment__card">
+                                    <div class="equipment__card-header">
+                                        <span class="equipment__card-info">[2 типа]</span>
+                                        <h4 class="equipment__card-name">Эливаторы</h4>
+                                    </div>
+                                    <div class="equipment__card-body">
+                                        <div class="equipment__card-container">
+                                            <img class="equipment__card-img" src="./img/imgs/elivator.png" alt="elivator">
+                                        </div>
+                                        <div class="equipment__card-btn card-btn">
+                                            <a class="card-btn__link" href="">
+                                                <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="equipment__card">
+                                    <div class="equipment__card-header">
+                                        <span class="equipment__card-info">[1 тип]</span>
+                                        <h4 class="equipment__card-name">Лифтовое оборудование</h4>
+                                    </div>
+                                    <div class="equipment__card-body">
+                                        <div class="equipment__card-container">
+                                            <img class="equipment__card-img" src="./img/imgs/lift.png" alt="lift">
+                                        </div>
+                                        <div class="equipment__card-btn card-btn">
+                                            <a class="card-btn__link" href="">
+                                                <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="equipment__card equipment__card-big">
+                                    <div class="equipment__card-header">
+                                        <span class="equipment__card-info">[5 типов]</span>
+                                        <h4 class="equipment__card-name">Запорная арматура</h4>
+                                    </div>
+                                    <div class="equipment__card-body">
+                                        <div class="equipment__card-container">
+                                            <img class="equipment__card-img" src="./img/imgs/buba.png" alt="buba">
+                                        </div>
+                                        <div class="equipment__card-btn card-btn">
+                                            <a class="card-btn__link" href="">
+                                                <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                            </a>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <div class="about__image-container">
+                <img src="./img/background/about_section.png" alt="about section" class="about__image">
+            </div>
+            <section class="about about__second">
+                <div class="container">
+                    <div class="about__content info">
+                        <div class="info__header">
+                            <div class="info__title">
+                                <h2 class="info__text">[О Компании]</h2>
+                            </div>
+                            <article class="info__description description">
+                                <h3 class="description__title">Компания является одним из ведущих поставщиков подземного и наземного оборудования на рынке</h3>
+                                <div class="description__body">
+                                    <div class="description__content">
+                                        <p class="description__text">Мы предлагаем широкий ассортимент оборудования и комплектующих. Осуществляем маркетинговую и коммерческую деятельность для обеспечения эффективного взаимодействия между производителями и потребителями.</p>
+                                    </div>
+                                    <div class="description__content">
+                                        <p class="description__text">Наша компания специализируемся на реализации продукции, производимой машиностроительными предприятиями партнерам, маркетинговой и коммерческой деятельностью.</p>
+                                        <p class="description__text">Мы работаем в тесном сотрудничестве с ведущими компаниями на рынке. Наши партнеры уверены в нашей надежности.</p>
+                                    </div>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section class="services">
+                <div class="container">
+                    <div class="services__content info">
+                        <div class="info__header services__header">
+                            <div class="info__title">
+                                <h2 class="info__text">[Услуги]</h2>
+                                <h3 class="equipment__description">Услуги нашей компании:</h3>
+                            </div>
+                        </div>
+                        <div class="services__body">
+                            <div class="services__cards">
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="services__card">
+                                    <div class="services__card-content">
+                                        <div class="services__card-header">
+                                            <div class="services__card-date">[ 01/06 ]</div>
+                                            <h4 class="services__card-name">Монтаж в горно-обогатительных рудниках</h4>
+                                        </div>
+                                        <div class="services__card-body">
+                                            <p class="services__card-description">Включает в себя все виды работ по установке, настройке и обслуживанию оборудования на территории горно-обогатительных предприятий.</p>
+                                            <div class="services__card-button">
+                                                <a class="card-btn__link" href="">
+                                                    <img class="card-btn__img welcome__button-img" src="./img/icons/double_arrow.svg" alt="double arrow">
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="collaborations"></section>
             <section class="form"></section>
         </main>
