add section with collaborations

--- a/index.html
+++ b/index.html
@@ -430,7 +430,112 @@
                     </div>
                 </div>
             </section>
-            <section class="collaborations"></section>
+            <section class="collaborations">
+                <div class="container">
+                    <div class="collaborations__content">
+                        <div class="info__header collaborations__header">
+                            <div class="info__title collaborations__title">
+                                <h2 class="info__text">[Сотрудничества]</h2>
+                                <h3 class="equipment__description">Нас выбирают лидеры на рынке:</h3>
+                            </div>
+                        </div>
+                        <div class="collaborations__body">
+                            <div class="collaborations__cards">
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [01]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/ural_kali.png" alt="Урал Калий" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [02]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/lukoil.png" alt="Лукойл" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [03]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/gazprom.png" alt="Газпром" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="collaborations__card-item">
+                                    
+                                </div>
+                                <div class="collaborations__card-item">
+                                    
+                                </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [04]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/sibur.png" alt="Сибур" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [05]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/rosneft.png" alt="Роснефть" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="collaborations__card-item">
+                                    <div class="collaborations__card">
+                                        <div class="collaborations__card-header">
+                                            <span class="collaborations__card-number">
+                                                [06]
+                                            </span>
+                                        </div>
+                                        <div class="collaborations__card-body">
+                                            <div class="collaborations__card-logo">
+                                                <img src="./img/imgs/collaborations/tatneft.png" alt="Татнефть" class="collaborations__card-img">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="form"></section>
         </main>
         <footer class="footer">
