finish first page

--- a/index.html
+++ b/index.html
@@ -595,7 +595,98 @@
             </section>
         </main>
         <footer class="footer">
-            
+            <div class="container">
+                <div class="footer__content form__content">
+                    <div class="form__aside footer__aside">
+                        <div class="info__title">
+                            <h2 class="info__text">[Контактная информация]</h2>
+                        </div>
+                    </div>
+                    <div class="form__main footer__main">
+                        <div class="footer__body">
+                            <div class="footer__pages">
+                                <article class="footer__page page">
+                                    <h3 class="page__header">Главная</h3>
+                                    <ul class="page__sections">
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">О Компании</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Оборудование</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Услуги</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Сотрудничество</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Компании</a>
+                                        </li>
+                                    </ul>
+                                </article>
+                                <article class="footer__page page">
+                                    <h3 class="page__header">Оборудование</h3>
+                                    <ul class="page__sections">
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Конвейеры</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Эливаторы</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Лифтовое оборудование</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Запорная арматура</a>
+                                        </li>
+                                    </ul>
+                                </article>
+                                <article class="footer__page page">
+                                    <h3 class="page__header">Услуги</h3>
+                                    <ul class="page__sections">
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Монтаж в горно-обогатительных рудниках</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Монтаж инженерных коммуникаций по выработкам</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Монтаж в горно-обогатительных рудниках</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Mонтаж лифтового оборудования</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Монтаж горно-шахтного оборудование под ключ</a>
+                                        </li>
+                                        <li class="page__section">
+                                            <a href="#" class="page__link">Cтроительство ходовых восстающих в стволе</a>
+                                        </li>
+                                    </ul>
+                                </article>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer__credits">
+                    <div class="footer__contacts">
+                        <div class="footer__number-phone">
+                            <a href="tel:+73422480885" class="footer__phone-link">+7(342) 248-08-85</a>
+                        </div>
+                        <div class="footer__email">
+                            <a href="mailto:OOO.TDNMZ@INBOX.RU" class="footer__email-link">OOO.TDNMZ@INBOX.RU</a>
+                        </div>
+                        <div class="footer__developers">
+                            <p class="footer__description">SITE BY: MVP PRODUCTION</p>
+                            <img src="./img/icons/mvp_logo.svg" alt="" class="footer__logo">
+                        </div>
+                    </div>
+                    <div class="footer__rights">
+                        <p class="rights">©️ <span class="year">2024</span> NmzSpecStroy. All Rights Reserved</p>
+                    </div>
+                </div>
+            </div>
         </footer>      
     </div>
 </body>
